1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libsimtoolsgui_la_LDFLAGS): Substitute inst_LDFLAGS.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

	* simtoolsgui.h: Include externvar.h.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtoolsgui.m (probeDisplayManager): Add externvardef.

	* ActionCache.m (Control, Probing, Spatial, InvalidActionType,
	ActionTypeNotImplemented): Add externvardef.

	* ControlPanel.m (ControlStateRunning, ControlStateStopped,
	ControlStateStepping, ControlStateNextTime, ControlStateQuit): Add
	externvardef.

	* simtoolsgui.h: Use `externvar' for external variables.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-04-26  Alex Lancaster  <alex@santafe.edu>

	* simtoolsgui.h (GUIComposite): Add compliance to SwarmObject
	protocol.  
	Revert this change, since protocol is abstract, confirmation
	added to instantiatable protocols.

1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ActionCache.h, ActionHolder.h, ClassDisplayWidget.h,
	ControlPanel.[hm], GUIComposite.h, GUISwarm.h,
	MessageProbeWidget.[hm], MultiVarProbeDisplay.h,
	ProbeDisplayManager.[hm], simtoolsgui.h: Add
	protocol compliance tags to interfaces, adjust phase info
	as necessary.

1999-04-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbeWidget.m (printVal): Accomodate renames in
	types_t (e.g. _char to schar).

1999-04-01  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* simtoolsgui.h: Protocol GUISwarm inherits protocol Swarm. 

1999-03-31  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* simtoolsgui.h: Add methods getActionCache and getControlPanel
	to GUISwarm.

	* GUISwarm.m ([GUISwarm -getActionCache]): New method.