@@ -1,3 +1,7 @@
+1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* MessageProbeWidget.m (printVal): Cast to unsigned, not unsigned char.
+
 1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
